ribbit/tests/ui/mismatch_nonzero.stderr
error[E0277]: the trait bound `u16: ribbit::NonZero` is not satisfied
 --> tests/ui/mismatch_nonzero.rs:4:1
  |
4 | #[ribbit::pack(size = 32)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ribbit::NonZero` is not implemented for `u16`
  |
  = help: the following other types implement trait `ribbit::NonZero`:
            std::num::NonZero<u16>
            std::num::NonZero<u32>
            std::num::NonZero<u64>
            std::num::NonZero<u8>
note: required by a bound in `assert_impl_all`
 --> tests/ui/mismatch_nonzero.rs:4:1
  |
4 | #[ribbit::pack(size = 32)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
  = note: this error originates in the attribute macro `ribbit::pack` (in Nightly builds, run with -Z macro-backtrace for more info)
